Fixing some spacing on 404 page

--- a/css/404.css
+++ b/css/404.css
@@ -9,7 +9,8 @@ h1 {
   text-align: center;
   font-size: 9em;
   margin-left: -3rem;
-  font-weight: 100;
+  letter-spacing: -5px;
+  font-weight: 300;
   text-shadow: rgb(192, 143, 79) 1px 1px,
     rgb(192, 143, 79) 2px 2px,
     rgb(192, 143, 79) 3px 3px,
